# Astro8-Computer

./: .gitignore  Astro8_Installer_Maker.iss  LICENSE  README.md  _config.yml  char_set_memtape  char_set_processed.hex  character-set.aseprite  code_text_val.txt  cpu-circuit - Copy (2).circ  cpu-circuit - Copy.circ  cpu-circuit.circ  default.html  draw_image.txt  example_armstrong_programslogisim_pmc.hex  microinstructions_cpu_v1  modpath.iss  multiplier.txt  pixel_gradient.txt  program_machine_code  rawinstout.txt  red.txt  tags  tags.temp
Astro8-Emulator/: Astro8-Emulator.aps  Astro8-Emulator.cpp  Astro8-Emulator.sln  Astro8-Emulator.vcxproj  Astro8-Emulator.vcxproj.filters  CMakeLists.txt  VSSynth.lib  armstrong-compiler.cpp  armstrong-compiler.h  assembler.cpp  audio.cpp  audio.h  color.hpp  colorprint.h  escapi.cpp  escapi.h  main.cpp  olcPixelGameEngine.h  processing.h  resource.h  strops.cpp  strops.h
Astro8-Emulator/Astro8-Emulator/x64/Release/: Astro8-Emulator.res  astro8.ipdb
Astro8-Emulator/Astro8-Emulator/x64/Release/Astro8-Emulator.tlog/: Astro8-Emulator.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+3 more)
Astro8-Emulator/VSSynth/: SoundGenerator.h  SynthMiddleware.h  Synthesizer.h  VSSynth.h
Astro8-Emulator/VSSynth/generators/: Instrument.h  MonophonicInstrument.h  PolyphonicInstrument.h  Sequencer.h  Tone.h
Astro8-Emulator/VSSynth/middleware/: WAVWriter.h
Astro8-Emulator/VSSynth/utils/: Envelope.h  Notes.h  Patches.h  Waveforms.h
Astro8-Emulator/linux-build/: .gitignore  AstroEmulator  CMakeCache.txt  Makefile  cmake_install.cmake
Astro8-Emulator/x64/Debug/: Astro8-Emulator.exe.recipe  Astro8-Emulator.ilk  Astro8-Emulator.vcxproj.FileListAbsolute.txt  vc143.idb
Astro8-Emulator/x64/Debug/Astro8-Emulator.tlog/: Astro8-Emulator.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Astro8-Emulator/x64/Release/: Astro8-Emulator.exe.recipe  Astro8-Emulator.iobj  Astro8-Emulator.ipdb  Astro8-Emulator.vcxproj.FileListAbsolute.txt  CodeAnalysisResultManifest.txt  astro8.exe.recipe  astro8.iobj  astro8.ipdb  logisim_pmc.hex  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  microinstructions_cpu  out.aexe  program_machine_code  vc.nativecodeanalysis.all.xml
Astro8-Emulator/x64/Release/Astro8-Emulator.tlog/: Astro8-Emulator.lastbuildstate  Astro8-Emulator.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Astro8-Emulator/x64/Release/Win_x64/: program_machine_code
(+117 files in other folders)
